<resources>
    <string name="app_name">module_2</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Add">Add</string>
    <string name="x">X</string>
    <string name="update">Update</string>
    <string name="student_info">Student Info</string>
    <string name="search">Search</string>
</resources>